@@ -343,6 +343,7 @@ CREATE TABLE `degrees` (
   `catalog_year` int(11)   DEFAULT '2006',
   `exclude` int(11)   DEFAULT '0',
   `allow_dynamic` int(11)   DEFAULT '0',
+  `override_degree_hours` varchar(20)   DEFAULT '',  
   PRIMARY KEY (`id`),
   KEY `degree_id` (`degree_id`),
   KEY `major_code` (`major_code`),
@@ -424,6 +425,7 @@ CREATE TABLE `draft_degrees` (
   `catalog_year` int(11)   DEFAULT '2006',
   `exclude` int(11)   DEFAULT '0',
   `allow_dynamic` int(11)   DEFAULT '0',
+  `override_degree_hours` varchar(20)   DEFAULT '',  
   PRIMARY KEY (`id`),
   KEY `degree_id` (`degree_id`),
   KEY `major_code` (`major_code`),
